# shiso-no-senshi

./: .gitignore  .markdownlint.json  .prettierrc.json  Cargo.toml  Dioxus.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
TestCollection/: Embed.md  README.md  Specification.md
assets/: compiled.css  main.css
assets/config/: config.default.json  config.schema.json
assets/styles/: app.css  colors.css
design/: KnowledgeStructure.md  Overview.md
docs/Design/: Architecture.md  EditorServerProtocol.md
isolation/: index.js
plugins/editors/plaintext/: Cargo.toml
plugins/interface/: Cargo.toml  message.rs
plugins/interface/src/: lib.rs
plugins/navigators/file/: Cargo.toml
src/: app.css  app.html  components.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  capabilities.json  default.json  desktop.json  iOS.json  linux.json  macOS.json  mobile.json  windows.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/components/: editor.rs  group.rs  navigator.rs  panel.rs  renderer.rs
src/components/navigator/: file_navigator.rs
src/lib/: logging.ts
src/lib/panels/: TreeView.ts
src/routes/: +layout.ts  +page.svelte  +page.ts
src/styles/: dock-theme.css  dockview.css  main.css
