[package]
name = "shiso-no-senshi"
version = "0.1.0"
authors = ["JEleniel <jeleniel@crystultima.org> (https://github.com/JEleniel)"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = [] }
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
