[workspace]
members = ["plugins/editors/*", "plugins/navigators/*"]

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["JEleniel <jeleniel@crystultima.org> (https://github.com/JEleniel)"]
edition = "2024"
repository = "https://github.com/Shiso-no-Senshi/shiso-no-senshi"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
dirs = "6.0.0"
dioxus = { version = "0.6.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
svg = "0.18.0"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
tokio = { version = "1.45.1", features = ["full"] }
shiso-no-senshi-plugin-interface = { path = "plugins/interface" }

[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "shiso-no-senshi"
description = "A cross platform personal knowledge manager designed from the ground up to be secure and leave complete control of your knowledge in your hands"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
config = { version = "0.15.11" }
dioxus = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shiso-no-senshi-plugin-interface = { workspace = true }
surrealdb = { version = "2.3.6", features = ["kv-mem", "kv-rocksdb"] }
svg = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
