[package]
name = "shiso-no-senshi"
version = "0.1.0"
description = "Shisō no Senshi (lit. Warrior of Thought) is a cross platform, free, open source, customizable knowledge management platform."
authors = ["JEleniel (https://github.com/JEleniel)"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shiso_no_senshi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "isolation"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
log = "0.4.25"
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
