[package]
name = "shiso-no-senshi-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
dioxus = { workspace = true }
svg = { workspace = true }

[lints]
workspace = true
